# blasterV2

./: .gitignore  README.md  build.gradle  holy.c  out.ppm  settings.gradle  todo.txt
antlr/: build.gradle
assets/models/akai/: akai.mtl
assets/models/bedroom/: bedroom.mtl
assets/models/cube/: cube.mtl
assets/models/house/: low.mtl
assets/models/mandalorian/: mandalorian.mtl
assets/models/pcjr/: pcjr.mtl
assets/models/scene/: Saturn.mtl  back.mtl  lunohod.mtl  meteor.mtl  planet.mtl  space.mtl
assets/models/sphere/: sphere.mtl
assets/recipes/: colors  raymarcher  tex-coords-time  tunes
assets/shaders/billboards/: billboards.frag  billboards.vert
assets/shaders/deferred/: geom_pass.frag  geom_pass.vert  light_pass.frag  light_pass.vert
assets/shaders/pbr/: pbr.frag  pbr.vert
assets/shaders/simple/: no_lighting.frag  no_lighting.vert
assets/shaders/skybox/: skybox.frag  skybox.vert
assets/shaders/sprites/: sprites.frag  sprites.vert
assets/shaders/text/: text.frag  text.vert
challenges/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
minigl/: build.gradle
miniui/: build.gradle
projector/: build.gradle
rider/: build.gradle
sfcs/: build.gradle
sfcs/scenarios/: 1_ProjectorModel
shadered/: build.gradle  recipe
shadergen/: build.gradle
shaderlang/: CMakeLists.txt  bool.c  camera.c  const.c  float.c  ivec2.c  lang.h  main.c  mat2.c  mat4.c  math.c  random.c  ray.c  raymarcher.c  raytracer.c  sampler.c  sandsim.c  sdfs.c  shaderlang.h  shading.c  vec2.c  vec3.c  vec4.c
simulator/: build.gradle
(+259 files in other folders)
